// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge respects the inline prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  border-radius: 50%;
  box-shadow: var(--shadow-resting-medium,var(--color-shadow-medium,0 3px 6px rgba(140,149,159,0.15)));
  width: 96px;
  height: 96px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge respects the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  border-radius: 50%;
  box-shadow: var(--shadow-resting-medium,var(--color-shadow-medium,0 3px 6px rgba(140,149,159,0.15)));
  width: 128px;
  height: 128px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge uses the size prop to override the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  border-radius: 50%;
  box-shadow: var(--shadow-resting-medium,var(--color-shadow-medium,0 3px 6px rgba(140,149,159,0.15)));
  width: 20px;
  height: 20px;
}

<div
  className="c0"
  size={20}
/>
`;
